replacing placeholder images in html with each student's illustration and portfolio pieces

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -28,15 +28,17 @@
 
       <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
-      <p class="student-name">Tin Fish Design</p>
-        <span><i class="fab fa-2x fa-facebook"></i></span>
-        <span><i class="fab fa-2x fa-instagram"></i></span>
+      <!-- <p class="student-name">Tin Fish Design</p> -->
+      <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
+      <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+      <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
+      <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
       </div>
 
       <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
         <ul class="portfolio-content">
-          <li><img src="dist/img/portfolio/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
           <li><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
           <li><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
@@ -51,8 +53,10 @@
       <div class="portfolio-content__wrapper">
         <div class="social-wrapper">
         <p class="student-name">Tin Fish Design</p>
-          <span><i class="fab fa-2x fa-facebook"></i></span>
-          <span><i class="fab fa-2x fa-instagram"></i></span>
+        <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+        <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+        <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+        <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
         </div>
 
         <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -80,7 +84,7 @@
       <!-- Joe's card start -->
 <div class="wrapper--alignleft">
   <div class="card">
-    <a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+    <a><img src="dist/img/portfolio/web-illustration-large-joe.png"></a>
 
 <h2>
 Joe Click
@@ -90,16 +94,18 @@ Joe Click
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="student-name">Tin Fish Design</p>
-<span><i class="fab fa-2x fa-facebook"></i></span>
-<span><i class="fab fa-2x fa-instagram"></i></span>
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+<li><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster." /></li>
+<li><img src="dist/img/joe-click/JC_Preeflight.png" alt="Preflight event poster." /></li>
+<li><img src="dist/img/joe-click/JC_Stencil_portrate.png" alt="Vector drawing of a woman's portrait." /></li>
 </ul>
 
 </div>
@@ -112,14 +118,16 @@ Joe Click
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="student-name">Tin Fish Design</p>
-<span><i class="fab fa-2x fa-facebook"></i></span>
-<span><i class="fab fa-2x fa-instagram"></i></span>
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
 <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
 <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
 </ul>
@@ -127,7 +135,7 @@ Joe Click
 </div>
 
 <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+<a><img src="dist/img/portfolio/web-illustration-large-danielle.png"></a>
 
 <h2>
 Danielle Prochaska
@@ -141,7 +149,7 @@ Danielle Prochaska
 <!-- Karey's card start -->
 <div class="wrapper--alignleft">
 <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+<a><img src="dist/img/portfolio/web-illustration-large-karey.png"></a>
 
 <h2>
 Karey Stivers
@@ -151,8 +159,10 @@ Karey Stivers
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="student-name">Tin Fish Design</p>
-<span><i class="fab fa-2x fa-facebook"></i></span>
-<span><i class="fab fa-2x fa-instagram"></i></span>
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -172,23 +182,25 @@ Karey Stivers
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
-<span><i class="fab fa-2x fa-facebook"></i></span>
-<span><i class="fab fa-2x fa-instagram"></i></span>
+<!-- <p class="student-name">Claire Creative</p> -->
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+<li><img src="dist/img/kennedy-pew/inlander.png" alt="Vector illustration Inlander cover." /></li>
+<li><img src="dist/img/kennedy-pew/mononoke poster.png" alt="Mononoke poster" /></li>
+<li><img src="dist/img/kennedy-pew/viscomm.png" alt="Viscom Poster." /></li>
 </ul>
 
 </div>
 
 <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+<a><img src="dist/img/portfolio/web-illustration-large-kennedy.png"></a>
 
 <h2>
 Kennedy Pew
@@ -202,7 +214,7 @@ Kennedy Pew
 <!-- Suelynn's card start -->
 <div class="wrapper--alignleft">
 <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+<a><img src="dist/img/portfolio/web-illustration-large-suelynn.png"></a>
 
 <h2>
 Suelynn Parker
@@ -212,16 +224,18 @@ Suelynn Parker
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="student-name">Tin Fish Design</p>
-<span><i class="fab fa-2x fa-facebook"></i></span>
-<span><i class="fab fa-2x fa-instagram"></i></span>
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+<li><img src="dist/img/suelynn-parker/Estate MagAd.jpg" alt="Estate magazine ad." /></li>
+<li><img src="dist/img/suelynn-parker/TetTrungThu.jpg" alt="Tet Trung Thu card" /></li>
+<li><img src="dist/img/suelynn-parker/Vizzcom.jpg" alt="Viscom poster" /></li>
 </ul>
 
 </div>
@@ -234,8 +248,10 @@ Suelynn Parker
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="student-name">Tin Fish Design</p>
-  <span><i class="fab fa-2x fa-facebook"></i></span>
-  <span><i class="fab fa-2x fa-instagram"></i></span>
+<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -272,8 +288,10 @@ Suelynn Parker
   <div class="portfolio-content__wrapper">
     <div class="social-wrapper">
     <p class="student-name">Tin Fish Design</p>
-      <span><i class="fab fa-2x fa-facebook"></i></span>
-      <span><i class="fab fa-2x fa-instagram"></i></span>
+    <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+    <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+    <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+    <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
     </div>
 
     <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -294,8 +312,10 @@ Suelynn Parker
     <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
       <p class="student-name">Tin Fish Design</p>
-        <span><i class="fab fa-2x fa-facebook"></i></span>
-        <span><i class="fab fa-2x fa-instagram"></i></span>
+      <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+      <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+      <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+      <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
       </div>
 
       <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -331,8 +351,10 @@ Suelynn Parker
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
           <p class="student-name">Tin Fish Design</p>
-            <span><i class="fab fa-2x fa-facebook"></i></span>
-            <span><i class="fab fa-2x fa-instagram"></i></span>
+          <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+          <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+          <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
           </div>
 
           <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -353,8 +375,10 @@ Suelynn Parker
           <div class="portfolio-content__wrapper">
             <div class="social-wrapper">
             <p class="student-name">Tin Fish Design</p>
-              <span><i class="fab fa-2x fa-facebook"></i></span>
-              <span><i class="fab fa-2x fa-instagram"></i></span>
+            <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+            <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+            <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+            <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
             </div>
 
             <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
@@ -392,8 +416,10 @@ Suelynn Parker
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
           <p class="student-name">Tin Fish Design</p>
-            <span><i class="fab fa-2x fa-facebook"></i></span>
-            <span><i class="fab fa-2x fa-instagram"></i></span>
+          <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+          <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+          <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
           </div>
 
           <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
