--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -20,7 +20,7 @@
       <div class="card">
 	        <a><img src="dist/img/portfolio/web-illustration-large-lydia.png"></a>
 
-       <h2>
+       <h2 class="student-name">
         Lydia Ramus
       </h2>
       </div>
@@ -28,7 +28,7 @@
 
       <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
-      <!-- <p class="student-name">Tin Fish Design</p> -->
+      <!-- <p class="designer-name"></p> -->
       <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
       <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
       <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
@@ -52,7 +52,7 @@
 
       <div class="portfolio-content__wrapper">
         <div class="social-wrapper">
-        <p class="student-name">Tin Fish Design</p>
+        <p class="designer-name">Tin Fish Design</p>
         <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
         <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
         <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -72,7 +72,7 @@
     <div class="card">
     <a><img src="dist/img/portfolio/web-illustration-large-emma.png"></a>
 
-         <h2>
+         <h2 class="student-name">
            Emma Castleberry
          </h2>
       </div>
@@ -86,14 +86,14 @@
   <div class="card">
     <a><img src="dist/img/portfolio/web-illustration-large-joe.png"></a>
 
-<h2>
+<h2 class="student-name">
 Joe Click
 </h2>
   </div>
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
+<!-- <p class="designer-name"></p> -->
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -117,7 +117,7 @@ Joe Click
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
+<p class="designer-name">Prochaska Creative</p>
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -127,9 +127,9 @@ Joe Click
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+<li><img src="dist/img/danielle-prochaska/preflight-2019-danielle-prochaska.png" alt="Preflight Poster." /></li>
+<li><img src="dist/img/danielle-prochaska/prochaska-creative-logo.png" alt="Prochaska Creative logo." /></li>
+<li><img src="dist/img/danielle-prochaska/urbanity-branding.png" alt="Urbanity Branding." /></li>
 </ul>
 
 </div>
@@ -137,7 +137,7 @@ Joe Click
 <div class="card">
 <a><img src="dist/img/portfolio/web-illustration-large-danielle.png"></a>
 
-<h2>
+<h2 class="student-name">
 Danielle Prochaska
 </h2>
 </div>
@@ -151,14 +151,14 @@ Danielle Prochaska
 <div class="card">
 <a><img src="dist/img/portfolio/web-illustration-large-karey.png"></a>
 
-<h2>
+<h2 class="student-name">
 Karey Stivers
 </h2>
 </div>
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
+<p class="designer-name">Katalist Innovations</p>
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
@@ -168,9 +168,10 @@ Karey Stivers
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+<li><img src="dist/img/karey-stivers/aa-tokyo-ad-portfolio.png" alt="Destination American Airlines Ad." /></li>
+<li><img src="dist/img/karey-stivers/skiresort-webpage_ks.png" alt="Ski resort homepage." /></li>
+<li><img src="dist/img/karey-stivers/dotkomtea-kspng.png" alt="dotKom Tea product labels." /></li>
+
 </ul>
 
 </div>
@@ -182,7 +183,7 @@ Karey Stivers
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<!-- <p class="student-name">Claire Creative</p> -->
+<!-- <p class="designer-name">Claire Creative</p> -->
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -202,7 +203,7 @@ Karey Stivers
 <div class="card">
 <a><img src="dist/img/portfolio/web-illustration-large-kennedy.png"></a>
 
-<h2>
+<h2 class="student-name">
 Kennedy Pew
 </h2>
 </div>
@@ -216,14 +217,14 @@ Kennedy Pew
 <div class="card">
 <a><img src="dist/img/portfolio/web-illustration-large-suelynn.png"></a>
 
-<h2>
+<h2 class="student-name">
 Suelynn Parker
 </h2>
 </div>
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
+<p class="designer-name">InfiniteParker Designs</p>
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -247,7 +248,7 @@ Suelynn Parker
 
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
-<p class="student-name">Tin Fish Design</p>
+<p class="designer-name">Qadira Graphics</p>
 <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -257,16 +258,16 @@ Suelynn Parker
 <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
 <ul class="portfolio-content">
-  <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-  <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-  <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+  <li><img src="dist/img/mattea-bergland/DuskNightclub.png" alt="Vector Dusk Night Club event poster." /></li>
+  <li><img src="dist/img/mattea-bergland/MESSAGESTHATMATTER.png" alt="Communications 101 textbook cover." /></li>
+  <li><img src="dist/img/mattea-bergland/sleepy_hollow_final.png" alt="Sleepy Hollow movie poster." /></li>
 </ul>
 
 </div>
 
 <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
- <h2>
+<a><img src="dist/img/portfolio/web-illustration-large-mattea.png"></a>
+ <h2 class="student-name">
    Mattea Bergland
  </h2>
 </div>
@@ -278,16 +279,16 @@ Suelynn Parker
 <!-- Sam's card start -->
   <div class="wrapper--alignleft">
   <div class="card">
-<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+<a><img src="dist/img/portfolio/web-illustration-large-sam.png"></a>
 
-     <h2>
+     <h2 class="student-name">
       Sam Stoke
     </h2>
   </div>
 
   <div class="portfolio-content__wrapper">
     <div class="social-wrapper">
-    <p class="student-name">Tin Fish Design</p>
+    <p class="designer-name">Stoke Design</p>
     <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
     <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
     <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -297,9 +298,9 @@ Suelynn Parker
     <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
     <ul class="portfolio-content">
-      <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-      <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-      <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+      <li><img src="dist/img/sam-stoke/Sam-icecream.jpg" alt="North Idaho Creamery ice cream ad." /></li>
+      <li><img src="dist/img/sam-stoke/sam-lettering.jpg" alt="Typography poster" /></li>
+      <li><img src="dist/img/sam-stoke/sam-tattoo-logo.jpg" alt="Tattoo design t-shirt." /></li>
     </ul>
 
   </div>
@@ -311,7 +312,7 @@ Suelynn Parker
 
     <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
-      <p class="student-name">Tin Fish Design</p>
+      <!-- <p class="designer-name"></p> -->
       <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
       <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
       <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -329,9 +330,9 @@ Suelynn Parker
     </div>
 
   <div class="card">
-  <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+  <a><img src="dist/img/portfolio/web-illustration-large-kallie.png"></a>
 
-       <h2>
+       <h2 class="student-name">
          Kallie Khademi
        </h2>
     </div>
@@ -342,15 +343,15 @@ Suelynn Parker
     <!-- Andre's card start -->
         <div class="wrapper--alignleft">
         <div class="card">
-    	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
-           <h2>
+    	<a><img src="dist/img/portfolio/web-illustration-large-andre.png"></a>
+           <h2 class="student-name">
             Andre Clark
           </h2>
         </div>
 
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
-          <p class="student-name">Tin Fish Design</p>
+          <p class="designer-name">Cosmic Div</p>
           <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -374,7 +375,7 @@ Suelynn Parker
 
           <div class="portfolio-content__wrapper">
             <div class="social-wrapper">
-            <p class="student-name">Tin Fish Design</p>
+            <!-- <p class="designer-name"></p> -->
             <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
             <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
             <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -392,9 +393,9 @@ Suelynn Parker
           </div>
 
         <div class="card">
-        <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+        <a><img src="dist/img/portfolio/web-illustration-large-jonah.png"></a>
 
-             <h2>
+             <h2 class="student-name">
                Jonah Leeder
              </h2>
           </div>
@@ -406,16 +407,16 @@ Suelynn Parker
     <!-- Rachel's card start -->
         <div class="wrapper--alignleft">
         <div class="card">
-    	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+    	<a><img src="dist/img/portfolio/web-illustration-large-rachel.png"></a>
             <h1>PORTFOLIO</h1>
-           <h2>
+           <h2 class="student-name">
             Rachel Adair
           </h2>
         </div>
 
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
-          <p class="student-name">Tin Fish Design</p>
+          <!-- <p class="designer-name"></p> -->
           <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
