--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -322,9 +322,9 @@ Suelynn Parker
       <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
       <ul class="portfolio-content">
-        <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-        <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-        <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+        <li><img src="dist/img/kallie-khademi/Bee_Bee_Cider.jpg" alt="Beebee Cider ad." /></li>
+        <li><img src="dist/img/kallie-khademi/Green_Tea_Matcha.jpg" alt="Green Tea Matcha packaging." /></li>
+        <li><img src="dist/img/kallie-khademi/SPiff_World_Shorts_Khademi.jpg" alt="Spiff World Shorts poster." /></li>
       </ul>
 
     </div>
@@ -375,7 +375,7 @@ Suelynn Parker
 
           <div class="portfolio-content__wrapper">
             <div class="social-wrapper">
-            <!-- <p class="designer-name"></p> -->
+            <p class="designer-name">Leeder Designs</p>
             <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
             <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
             <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -385,9 +385,9 @@ Suelynn Parker
             <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
             <ul class="portfolio-content">
-              <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-              <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-              <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+              <li><img src="dist/img/jonah-leeder/01_mihara_jzleeder.png" alt="Mihara Law PLLC webpage." /></li>
+              <li><img src="dist/img/jonah-leeder/02_redemption_jzleeder.png" alt="Redemption t-shirt." /></li>
+              <li><img src="dist/img/jonah-leeder/03_jesus_jzleeder.png" alt="Jesus Saves guitar strap." /></li>
             </ul>
 
           </div>
