Added a blurb about each of us, taken from the souviner booklet.

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -35,7 +35,7 @@
       <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
       </div>
 
-      <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+      <p>I have always been drawn to writing and immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that essence in its visual form.</p>
 
         <ul class="portfolio-content">
           <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
@@ -59,7 +59,7 @@
         <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
         </div>
 
-        <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+        <p>From illustrations to layouts, refinement to building, I usually start with rough sketches for everything. I'm looking to hone my skills and do something more meaningful with my artistic ability.</p>
 
         <ul class="portfolio-content">
           <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
@@ -100,7 +100,7 @@ Joe Click
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>I enjoy creating illustrations & concept designs. I am inspired by designs that break outside the box of normal conventions.</p>
 
 <ul class="portfolio-content">
 <li><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster." /></li>
@@ -124,7 +124,7 @@ Joe Click
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>When designing, I don't allow any limitations; I allow my mind to be completely free to wander and explore different ideas. This allows me to invent unique designs that will tell stories or evoke raw emotions.</p>
 
 <ul class="portfolio-content">
 <li><img src="dist/img/danielle-prochaska/preflight-2019-danielle-prochaska.png" alt="Preflight Poster." /></li>
@@ -165,7 +165,7 @@ Karey Stivers
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>Being a designer isn't just about having a career and making money – it's about being the creative person I've always been... I love being the "creative type" that helps others share their message in interesting and beautiful ways...</p>
 
 <ul class="portfolio-content">
 <li><img src="dist/img/karey-stivers/aa-tokyo-ad-portfolio.png" alt="Destination American Airlines Ad." /></li>
@@ -190,7 +190,7 @@ Karey Stivers
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>All of my inspiration comes from the world around me. There are so many opportunities, possibilities, and beauty all around us, and that is the fire that feeds my inspiration.</p>
 
 <ul class="portfolio-content">
 <li><img src="dist/img/kennedy-pew/inlander.png" alt="Vector illustration Inlander cover." /></li>
@@ -231,7 +231,7 @@ Suelynn Parker
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>I am inspired by animations, video game graphics, magazines, and comic book/novels. Curiosity motivates me to explore new designs and skills and be inspired by other designers and artists.</p>
 
 <ul class="portfolio-content">
 <li><img src="dist/img/suelynn-parker/Estate MagAd.jpg" alt="Estate magazine ad." /></li>
@@ -255,7 +255,7 @@ Suelynn Parker
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
 </div>
 
-<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+<p>I didn't want to waste any time "getting started" in my career. I have grown so much as an artist, designer, and as a person since I joined the NIC Graphic Design Program.</p>
 
 <ul class="portfolio-content">
   <li><img src="dist/img/mattea-bergland/DuskNightclub.png" alt="Vector Dusk Night Club event poster." /></li>
@@ -295,7 +295,7 @@ Suelynn Parker
     <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
     </div>
 
-    <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+    <p>I like to do lettering and get inspiration from the web. I would like to work with cool people doing branding and designing for others.</p>
 
     <ul class="portfolio-content">
       <li><img src="dist/img/sam-stoke/Sam-icecream.jpg" alt="North Idaho Creamery ice cream ad." /></li>
@@ -319,7 +319,7 @@ Suelynn Parker
       <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
       </div>
 
-      <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+      <p>I would love to work as a Creative Director for a design agency. I had spent the previous 10 years as either a high school teacher, therapeutic wilderness guide, or life coach working with at-risk young adults and adolescents. I jump at the chance of being creative and solving problems, which inspired me to be a graphic designer.</p>
 
       <ul class="portfolio-content">
         <li><img src="dist/img/kallie-khademi/Bee_Bee_Cider.jpg" alt="Beebee Cider ad." /></li>
@@ -358,7 +358,7 @@ Suelynn Parker
           <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
           </div>
 
-          <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+          <p>I want to be a core member of a talented team working on premium websites. I get creative through my process of listening to loud electric music, and drinking black tea.</p>
 
           <ul class="portfolio-content">
             <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
@@ -382,7 +382,7 @@ Suelynn Parker
             <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
             </div>
 
-            <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+            <p>I currently work at Anthem Church as a Creative/Production Assistant and apply skills for freelance on the side. I have my design persona, Leeder Designs, designing brands, prints, website, and managing social media.</p>
 
             <ul class="portfolio-content">
               <li><img src="dist/img/jonah-leeder/01_mihara_jzleeder.png" alt="Mihara Law PLLC webpage." /></li>
@@ -423,7 +423,7 @@ Suelynn Parker
           <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
           </div>
 
-          <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+          <p>I love food & animals, but what I love even more is to travel the world & capture its beauty. I would love to be on a set somewhere making movies and to be in charge of projects and/or helping others create new designs. What helps my creative process is a cup of of coffee, putting on some Queen, and busting a move! </p>
 
           <ul class="portfolio-content">
             <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
