--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -35,12 +35,12 @@
       <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
       </div>
 
-      <p>I have always been drawn to writing and immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that essence in its visual form.</p>
+      <p>I have always been drawn to writing and the immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that in its visual form.</p>
 
         <ul class="portfolio-content">
-          <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
 
       </div>
@@ -62,9 +62,9 @@
         <p>From illustrations to layouts, refinement to building, I usually start with rough sketches for everything. I'm looking to hone my skills and do something more meaningful with my artistic ability.</p>
 
         <ul class="portfolio-content">
-          <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
 
       </div>
@@ -103,9 +103,9 @@ Joe Click
 <p>I enjoy creating illustrations & concept designs. I am inspired by designs that break outside the box of normal conventions.</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster." /></li>
-<li><img src="dist/img/joe-click/JC_Preeflight.png" alt="Preflight event poster." /></li>
-<li><img src="dist/img/joe-click/JC_Stencil_portrate.png" alt="Vector drawing of a woman's portrait." /></li>
+<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster." /></li>
+<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Preeflight.png" alt="Preflight event poster." /></li>
+<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Stencil_portrate.png" alt="Vector drawing of a woman's portrait." /></li>
 </ul>
 
 </div>
@@ -437,6 +437,41 @@ Suelynn Parker
 
 
 </div>
+
+<!-- Code for Lightbox -->
+<div class="lightbox">
+
+
+  <div class="lightbox_images">
+      <span class="lightbox_closeout">close</span>
+    <div class="main_img">
+      <img class="testimg" src="dist/img/emma-castleberry/Cold_November-web.png" alt="Spiff poster." />
+
+    </div>
+
+    <ul class="thumb_img">
+        <li><img class="testimg" src="dist/img/emma-castleberry/Cold_November-web.png" alt="Spiff poster." /></li>
+        <li><img class="testimg" src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Spiff poster." /></li>
+        <li><img class="testimg" src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Spiff poster." /></li>
+    </ul>
+
+  </div>
+
+
+
+
+
+</div>
   </section>
+
+
+
+
+
+
+
+
+
+
 </body>
 <html>
