--- a/copy.html
+++ b/copy.html
@@ -42,7 +42,8 @@
 
      <!---Introduction for portfolio page-->
 
-     <p>this is where the intro will be</p>
+     <p>Discover the Graphic & Web Design graduating class of 2019!</p>
+     <p></p>
 
 
 </body>
