--- a/copy.html
+++ b/copy.html
@@ -14,7 +14,7 @@
     <!---Event Info on splashpage/facebook/event card-->
 
     <h1>Student Portfolio Show</h1>
-    <h2>Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work. </h2>
+    <h2>Discover the Graphic Design graduating class of 2019 at the North Idaho College Workforce Training Center. </h2>
     <p>When: Friday, May 3rd 2019 at 4:30 pm to 7 pm</p>
     <p>Where: Workforce Training Center
             525 Clearwater LoopPost Falls, ID 83854</p>
@@ -22,7 +22,7 @@
     <!---About Program from Welearndesign this is good text for the program page/card-->
     
     <p>The Graphic Design and Web Design Program is designed to prepare students for entry-level 
-        positions in the corresponding field. The program emphasizes the basic skills, 
+        positions in their perspective fields. The program emphasizes basic skills, 
         knowledge, and abilities typically encountered in the graphic design professions. 
         Instruction includes theories and methodologies used to implement creative, technical, 
         and aesthetic solutions into print advertising, packaging, web, digital video and new media applications.</p>
@@ -42,8 +42,9 @@
 
      <!---Introduction for portfolio page-->
 
-     <p>Discover the Graphic & Web Design graduating class of 2019!</p>
-     <p></p>
+     <h2>Discover the Graphic & Web Design graduating class of 2019!</h2>
+     <p>We use theories and methodologies to implement creative, technical, 
+            and aesthetic solutions into print advertising, packaging, web, digital video and new media applications.</p>
 
 
 </body>
