--- a/copy.html
+++ b/copy.html
@@ -14,7 +14,7 @@
     <!---Event Info on splashpage/facebook/event card-->
 
     <h1>Student Portfolio Show</h1>
-    <h2>Discover the Graphic Design graduating class of 2019 at the North Idaho College Workforce Training Center. </h2>
+    <h2>Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center. </h2>
     <p>When: Friday, May 3rd 2019 at 4:30 pm to 7 pm</p>
     <p>Where: Workforce Training Center
             525 Clearwater LoopPost Falls, ID 83854</p>
@@ -43,8 +43,8 @@
      <!---Introduction for portfolio page-->
 
      <h2>Discover the Graphic & Web Design graduating class of 2019!</h2>
-     <p>We use theories and methodologies to implement creative, technical, 
-            and aesthetic solutions into print advertising, packaging, web, digital video and new media applications.</p>
+     <p>We use includes necessary theories and methodologies to implement creative, technical, 
+            and aesthetic design solutions into print advertising, packaging, web, digital video and new media applications.</p>
 
 
 </body>
