--- a/splash.html
+++ b/splash.html
@@ -20,9 +20,10 @@
 
 
                         <!-- MOBILE HERO IMAGE SLIDER ENDS -->
-                                <h1>DSCVR Student. Portfolio. Show</h1>
+                                <h1>DSCVR</h1> 
+                                <h1>Student. Portfolio. Show</h1>
                                <p class="card__description">
-                                Discover the Graphic Design graduating class of 2019 at the North Idaho College Workforce Training Center.
+                                Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center.
                                </p>
                                <h3>Friday May 3rd at 4:30 pm to 7 pm</h3>
                                <p>North Idaho College Workforce Traning Center 
