Finished contact page Created a thank you for subscribing page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>North Idaho College Student Portfolio Show</title>
+    <title>Contact</title>
 	<link rel="stylesheet" href="dist/css/app.css">
 </head>
 
@@ -45,20 +45,20 @@
                 <label class="marketing-header">Marketing Permissions</label>
                 <p>NIC GDES will use the information you provide on this form to be in touch with you and to provide updates and marketing. Please let us know all the ways you would like to hear from us:</p>
                 <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-                <label class="checkbox subfield" for="gdpr_18517"><input type="checkbox" id="gdpr_18517" name="gdpr[18517]" value="Y" class="av-checkbox"><span>Email</span> </label><label class="checkbox subfield" for="gdpr_18525"><input type="checkbox" id="gdpr_18525" name="gdpr[18525]" value="Y" class="av-checkbox "><span>Direct Mail</span> </label>
+                <label class="checkbox subfield" for="gdpr_18517"><input type="checkbox" id="gdpr_18517" name="gdpr[18517]" value="Y" class="av-checkbox"><span>Email</span> </label><label class="checkbox subfield" for="gdpr_18525"><input type="checkbox" id="gdpr_18525" name="gdpr[18525]" value="Y" class="av-checkbox"><span>Direct Mail</span> </label>
                 </fieldset>
-                <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+                <p class="unsubscribe">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
             </div>
             <div class="content__gdprLegal">
-                <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing.</p>
+                <p class="unsubscribe">We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing.</p>
                 <p><a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
             </div>
         </div>
-            <div id="mce-responses" class="clear">
+            <!-- <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
             </div>    real people should not fill this in and expect good things - do not remove this or risk form bot signups
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div> -->
             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
         </form>
